# yolox_people_detection

./: .gitignore  CMakeLists.txt  ISP_model.c  Kconfig  README.md  demo_screen.py  fp16VSint8.py  gaptest.yml  main.h  main.py  main_demo.c  main_inference.c  read_image_spi.py  read_image_uart.py  requirements.txt  sdk.config  show_boxes.py  spi_comm.c  spi_comm.h  utils.py
custom_layers/: camera.c  camera.h  decoding.c  decoding.h  draw.c  draw.h  img_flush.c  img_flush.h  jpeg_compress.c  jpeg_compress.h  postprocessing.c  postprocessing.h  slicing.c  slicing.h
decoding_layer/: Makefile  decoding.py  test_decoding.c  test_decoding.py
inference_gvsoc/: Expression_Kernels.c  Expression_Kernels.h  Makefile  Model.c  common.mk  decoding.c  decoding.h  main.c  model.c  model.h  slicing.c  slicing.h  validate.py
inference_gvsoc/BUILD_MODEL/: GenTile  modelKernels.c  (+1 more)
inference_gvsoc_240x320_int/: CMakeLists.txt  Makefile  common.mk  draw.c  emul.mk  input.ppm  main.c  main.h  model.c  postprocessing.c  postprocessing.h  run_make.sh  sdk.config  slicing.c  slicing.h  val_run.sh
inference_gvsoc_240x320_int/common/: model_decl.mk
inference_gvsoc_240x320_int/test_data/: input.ppm
inference_gvsoc_240x320_int/weights_tensors/: Constant__1250.tensor  Constant__1253.tensor  Constant__1256.tensor  Constant__1259.tensor  Constant__1262.tensor  Constant__1268.tensor  Constant__1274.tensor  Constant__1280.tensor  Constant__1283.tensor  Constant__1286.tensor  Constant__1289.tensor  Constant__1292.tensor  Constant__1301.tensor  Constant__1304.tensor  Constant__1307.tensor  Constant__1313.tensor  Constant__1322.tensor  Constant__1331.tensor  Constant__1334.tensor  Constant__1337.tensor  Constant__1340.tensor  Constant__1343.tensor  Constant__1352.tensor  Constant__1355.tensor  Constant__1358.tensor  Constant__1361.tensor  Constant__1364.tensor  Constant__1367.tensor  Constant__1370.tensor  Constant__1373.tensor  Constant__1379.tensor  Constant__1385.tensor  Constant__1391.tensor  Constant__1394.tensor  Constant__1397.tensor  Constant__1400.tensor  Constant__1403.tensor  Constant__1406.tensor  Constant__1409.tensor  Constant__1415.tensor  (+292 more)
inference_gvsoc_240x320_int_bayer/: CMakeLists.txt  Kconfig  Makefile  common.mk  demo_screen.py  draw.c  img_flush.c  img_flush.h  input.pgm  jpeg_compress.c  jpeg_compress.h  main.c  main.h  main_demo.c  main_inference.c  model.c  postprocessing.c  sdk.config  slicing.c  uart_image_stream_rx.py  uart_read_jpg.py  val_run.sh
inference_gvsoc_240x320_int_bayer/common/: model_rules.mk
inference_gvsoc_240x320_int_bayer/test_data/: input.pgm
inference_gvsoc_240x320_int_bayer/weights_tensors/: Constant__1247.tensor  Constant__1250.tensor  Constant__1253.tensor  Constant__1256.tensor  Constant__1259.tensor  Constant__1262.tensor  Constant__1265.tensor  Constant__1268.tensor  Constant__1271.tensor  Constant__1274.tensor  Constant__1277.tensor  Constant__1280.tensor  Constant__1283.tensor  Constant__1286.tensor  Constant__1289.tensor  Constant__1292.tensor  Constant__1295.tensor  Constant__1298.tensor  Constant__1301.tensor  Constant__1304.tensor  Constant__1307.tensor  Constant__1310.tensor  Constant__1313.tensor  Constant__1316.tensor  Constant__1319.tensor  Constant__1322.tensor  Constant__1325.tensor  Constant__1328.tensor  Constant__1331.tensor  Constant__1334.tensor  Constant__1337.tensor  Constant__1340.tensor  Constant__1343.tensor  Constant__1346.tensor  Constant__1349.tensor  Constant__1352.tensor  Constant__1355.tensor  Constant__1358.tensor  Constant__1361.tensor  Constant__1364.tensor  (+415 more)
inference_gvsoc_240x320_int_bayer_v2/: CMakeLists.txt  draw.c  input_rgb.ppm  main.c  main.h  model.c  modelInfos.h  nntool_generate_model.py  run_make.sh
inference_gvsoc_240x320_int_with_new_thresholds/: decoding.c  decoding.h  draw.c  postprocessing.c
inference_gvsoc_360x480_int_bayer/: CMakeLists.txt  draw.h  input_rgb.ppm  main.c  main.h  run_make.sh  sdk.config  slicing.c  slicing.h
inference_gvsoc_360x480_int_bayer/files/: CMakeLists.txt  main.c  model.c
inference_gvsoc_360x480_int_bayer/files/weights_tensors/: Constant__1255.tensor  Constant__1258.tensor  Constant__1264.tensor  Constant__1273.tensor  Constant__1276.tensor  Constant__1282.tensor  Constant__1285.tensor  Constant__1291.tensor  Constant__1297.tensor  Constant__1303.tensor  Constant__1312.tensor  Constant__1324.tensor  Constant__1339.tensor  Constant__1345.tensor  Constant__1348.tensor  Constant__1351.tensor  Constant__1363.tensor  Constant__1366.tensor  Constant__1372.tensor  Constant__1378.tensor  Constant__1381.tensor  Constant__1387.tensor  Constant__1393.tensor  Constant__1411.tensor  Constant__1417.tensor  Constant__1420.tensor  Constant__1432.tensor  Constant__1441.tensor  Constant__1444.tensor  Constant__1450.tensor  Constant__1456.tensor  Constant__1465.tensor  Constant__1471.tensor  Constant__1474.tensor  Constant__1486.tensor  Constant__1489.tensor  Constant__1492.tensor  Constant__1501.tensor  Constant__1507.tensor  Constant__1510.tensor  (+168 more)
inference_gvsoc_fp16/: Expression_Kernels.c  Expression_Kernels.h  Makefile  Model.c  common.mk  decoding.c  decoding.h  draw.c  draw.h  model.c  model.h  postprocessing.c  postprocessing.h  run_make.sh  slicing.c  slicing.h  val_bash.sh
inference_with_regeneration/: CMakeLists.txt  main.c  main.h  model.c  modelInfos.h  nntool_generate_model.py  postprocessing.h  run_make.sh  sdk.config  slicing.c
model_generator/: nntool_generate_model.py  test_model.ipynb
onnx_weights/: yolox_nano_rgb_256x320_coco.onnx
postprocessing_layer/: Makefile  post_processing.py  post_processing_test.py  postprocessing.c  postprocessing.h  postprocessing_test.c
quantization/: dataset_generators.py  gvsoc_gen_inputs.py  onnx_utils.py  quantize.py  to_onnx.py  utils.py
samples/: 17_qvga_resized.pgm  7_qvga.pgm
slicing_layer/: Makefile  slicing.c  slicing.h  slicing.py  test.c  test_slicing.c  test_slicing.py  utils.py
test_data/: input.ppm
weights/: model.onnx  model_bayer.onnx  yolox-QVGA-bayer-BGR.onnx  yolox_nano_MVGA_less_chan.onnx
(+1153 files in other folders)
